--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         </excludes>
       </resource>
     </resources>
+    
     <plugins>
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
@@ -36,4 +37,11 @@
       </plugin>
     </plugins>
   </build>
+  <dependencies>
+    <dependency>
+  <groupId>org.hibernate</groupId>
+  <artifactId>hibernate-annotations</artifactId>
+  <version>3.5.6-Final</version>
+</dependency>
+</dependencies>
 </project>
