--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,12 @@
     <artifactId>hibernate-core</artifactId>
     <version>4.1.0.Final</version>
 </dependency>
+<!-- https://mvnrepository.com/artifact/br.com.caelum.stella/caelum-stella-core -->
+<dependency>
+    <groupId>br.com.caelum.stella</groupId>
+    <artifactId>caelum-stella-core</artifactId>
+    <version>2.1.2</version>
+</dependency>
 
 
 <!-- https://mvnrepository.com/artifact/javax.activation/activation -->
