--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -51,7 +51,10 @@
 		<servlet-name>ExameServlet</servlet-name>
 		<url-pattern>/enviarExame</url-pattern>
 		<url-pattern>/listarExames</url-pattern>
+		<url-pattern>/deletarExame</url-pattern>
+		
 	</servlet-mapping>
+
 	<welcome-file-list>
 		<welcome-file>login.jsp</welcome-file>
 	</welcome-file-list>
