--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -51,7 +51,7 @@
 		<url-pattern>/enviarExame</url-pattern>
 		<url-pattern>/listarExames</url-pattern>
 		<url-pattern>/deletarExame</url-pattern>
-		
+		<url-pattern>/exameArquivo</url-pattern>
 	</servlet-mapping>
 
 	<welcome-file-list>
