--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -46,6 +46,7 @@
 		<servlet-name>LaudoServlet</servlet-name>
 		<url-pattern>/salvarLaudo</url-pattern>
 		<url-pattern>/validarLaudo</url-pattern>
+		<url-pattern>/validar</url-pattern>
 	</servlet-mapping>
 		<servlet-mapping>
 		<servlet-name>ExameServlet</servlet-name>
